--- a/dev_src/html_login.html
+++ b/dev_src/html_login.html
@@ -26,7 +26,7 @@
 <link rel="icon" href="https://cdn.jsdelivr.net/gh/RaSan147/pyrobox@main/assets/favicon.png" type="image/png">
 
 
-<link rel="stylesheet" href="/@static?style">
+<link rel="stylesheet" href="?style">
 </head>
 
 <body>
@@ -63,7 +63,7 @@
 </div>
 
 <br>
-<div>Don't Have account? <a href="/@static?signup" style="font-size: medium;">SIGNUP</a></div>
+<div>Don't Have account? <a href="?signup" style="font-size: medium;">SIGNUP</a></div>
 
 
 <style>
