--- a/dev_src/html_page.html
+++ b/dev_src/html_page.html
@@ -72,7 +72,7 @@ ${PY_HTML_STYLE}
 </div>
 
 
-<div id="actions-btn" class="disable_selection jsonly" onclick="fm.show_more_menu()"><span class="fa fa-solid fa-plus"><b>+</b></span></div>
+<div id="actions-btn" class="disable_selection jsonly" onclick="page.show_more_menu()"><span class="fa fa-solid fa-plus"><b>+</b></span></div>
 <div id="progress-island" class="disable_selection jsonly" onclick="progress_bars.show_list()">
 	<span id="progress-uploads">Running Uploads 
 	<span id="progress-uploads-count">(0/0)</span></span>
