--- a/dev_src/html_signup.html
+++ b/dev_src/html_signup.html
@@ -25,7 +25,7 @@
 <link rel="icon" href="https://cdn.jsdelivr.net/gh/RaSan147/pyrobox@main/assets/favicon.png" type="image/png">
 
 
-<link rel="stylesheet" href="/@static?style">
+<link rel="stylesheet" href="?style">
 </head>
 
 <body>
@@ -61,7 +61,7 @@
 </div>
 
 <br>
-<div>Already Have account? <a href="/@static?login" style="font-size: medium;">LOGIN</a></div>
+<div>Already Have account? <a href="?login" style="font-size: medium;">LOGIN</a></div>
 
 <br>
 <b>Please Note:</b>
