fixed rename, added DEBUGGING flag in js for testing features
.debug_only elements will be hidden if DEBUGGING flag is on, using it for under development tools

--- a/dev_src/html_page.html
+++ b/dev_src/html_page.html
@@ -62,7 +62,7 @@ const public_url = "${PY_PUBLIC_URL}";
 		id="close-sidebarR" onclick = "sidebar_control.closeNavR()">&times;</span> <!-- × -->
 
 	<div>
-		<div id="preference_button" class="accordion accordion-button" onclick="appConfig.show_help_note()">Preference</div>
+		<div id="preference_button" class="accordion accordion-button debug_only" onclick="appConfig.show_help_note()">Preference</div>
 		<div class="member_only">
 			<div id="note_button" class="accordion accordion-button" onclick="appConfig.show_author_note()">User Panel</div>
 			<div id="admin_button" class="accordion accordion-button admin_only" onclick="goto('./?admin')">Admin Panel</div>
