--- a/dev_src/html_admin.html
+++ b/dev_src/html_admin.html
@@ -124,20 +124,16 @@ class Admin_tools {
 	display_users() {
 		var table = byClass("users_list")[0];
 		var rows = table.rows.length;
-		for (var i = 1; i < rows; i++) {
+		for (let i = 1; i < rows; i++) {
 			table.deleteRow(1);
 		}
 
-		for (i = 0; i < this.user_list.length; i++) {
+		for (let i = 0; i < this.user_list.length; i++) {
 			var row = table.insertRow(-1);
 			row.innerHTML = "<td>" + this.user_list[i] + "</td><td><div class='pagination' onclick='admin_tools.update_user_perm(" + i +
 				")'>Permissions</div></td></td><td><div class='pagination' onclick='admin_tools.delete_user(" + i +
 					")'>Delete</div></td>";
 		}
-	}
-
-	show_perms(index) {
-
 	}
 
 	update_user_perm(index) {
@@ -157,6 +153,7 @@ class Admin_tools {
 	}
 
 	delete_user(index) {
+		console.log(index);
 		var username = this.user_list[index];
 		r_u_sure({y:()=>{
 			fetch('/?delete_user=' + username)
