--- a/dev_src/html_signup.html
+++ b/dev_src/html_signup.html
@@ -135,26 +135,21 @@ function test_fields(){
 
 	if(_uname.length<1){
 		note("Username must have at least 1 character!")
-		return 0;
-	}
-	if (_uname.length>64){
+	} else if (_uname.length>64){
 		note("Username must be less than 64 character long")
-		return 0;
-	}
-	if (_pass.length<4){
+	} else if (_pass.length<4){
 		note("Password must have at least 4 character!")
-		return 0;
-	}
-	if (_pass.length>256){
+	}else if (_pass.length>256){
 		note("Password can't be longer than 256 characters")
-		return 0;
-	}
-	if (!usernameRegex.test(_uname)){
+	} else if (!usernameRegex.test(_uname)){
 		note("Username can only have A-Z, a-z, 0-9, _")
-		return 0;
+	} else if (_uname == _pass){
+		note("Username and password can't be the same!")
+	} else {
+		return 1;
 	}
-	note()
-	return 1;
+
+	return 0;
 }
 
 
