--- a/dev_src/html_page.html
+++ b/dev_src/html_page.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet'>
 <title>${PY_PAGE_TITLE}</title>
 
 <link rel="stylesheet" href="?style">
@@ -119,7 +119,10 @@ const public_url = "${PY_PUBLIC_URL}";
 				<!-- CONTENT LIST (NO JS) -->
 
 				<!-- ${PY_NO_JS_FILE_LIST} -->
+
+				
 			</ul>
+			<!-- ${PY_UPLOAD_FORM} -->
 		</div>
 
 		<div id="js-content_list" class="jsonly">
@@ -134,7 +137,7 @@ const public_url = "${PY_PUBLIC_URL}";
 		<p><u>Message:</u> <span id="error_message">${message}</span></p>
 		<p><u>Error code explanation:</u> <span id="error_code2">${code}</span> - <span id="error_explain">${explain}</span></p>
 		<hr>
-		<center><img src = "https://http.cat/${code}" style="max-width: 95vw;" alt="Error Image"></img></center>
+		<center><img src = "https://http.cat/${code}" style="max-width: 95vw;" alt="Error Image"/></center>
 	</div>
 
 
@@ -194,7 +197,6 @@ const public_url = "${PY_PUBLIC_URL}";
 	</div>
 </div>
 
-<!-- ${PY_UPLOAD_FORM} -->
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/plyr/3.7.0/plyr.min.js" crossorigin="anonymous" onerror="document.getElementById('player').style.maxWidth = '98vw'"></script>
