--- a/dev_src/html_signup.html
+++ b/dev_src/html_signup.html
@@ -13,7 +13,7 @@
 
 
 
-<link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
+<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet'>
 
 <title>Signup</title>
 
