Fix zip and #86

--- a/dev_src/html_page.html
+++ b/dev_src/html_page.html
@@ -157,6 +157,12 @@ const public_url = "${PY_PUBLIC_URL}";
 
 	</div>
 
+	<div id="zip-page" class="page">
+		<h2>ZIPPING FOLDER</h2>
+		<h3 id="zip-prog">Progress</h3>
+		<h3 id="zip-perc"></h3>
+	</div>
+
 	<div id="admin_page" class="page">
 
 		<h1 style="text-align: center;">Admin Page</h1>
@@ -209,6 +215,8 @@ const public_url = "${PY_PUBLIC_URL}";
 <script src="/?video_page_script"></script>
 <script src="/?admin_page_script"></script>
 <script src="/?error_page_script"></script>
+<script src="/?zip_page_script"></script>
+
 
 <script src="/?page_handler_script"></script>
 
