--- a/dev_src/html_signup.html
+++ b/dev_src/html_signup.html
@@ -109,7 +109,7 @@ table {
 }
 </style>
 
-<script src="/?global_script"></script>
+<script src="/?script_global"></script>
 <script>
 
 function update_note(note='', color="gray"){
