--- a/dev_src/html_login.html
+++ b/dev_src/html_login.html
@@ -110,7 +110,7 @@ table {
 }
 </style>
 
-<script src="/?global_script"></script>
+<script src="/?script_global"></script>
 <script>
 
 function update_note(note='', color="gray"){
