--- a/dev_src/html_page.html
+++ b/dev_src/html_page.html
@@ -242,7 +242,8 @@
 
 
 
-	<link rel="stylesheet" href="https://raw.githack.com/RaSan147/pyrobox/main/assets/video.css" />
+	<!-- <link rel="stylesheet" href="https://raw.githack.com/RaSan147/pyrobox/main/assets/video.css" /> -->
+	<link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css" />
 
 </body>
 
